welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:17: error: not found: value diagg
			if (diagg<=5) {setPos(0,diagg)}
                            ^Diagonal:17: error: not found: value diagg
			if (diagg<=5) {setPos(0,diagg)}
                                                ^Diagonal:18: error: not found: value diagg
			else {setPos(diagg-6,getMondeHauteur()-1)}
                                     ^Diagonal:19: error: not found: value diagg
			diagg = diagg + 1
                        ^